
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {unsigned long ds_addr; } ;
typedef TYPE_1__ bus_dma_segment_t ;


 int KASSERT (int,char*) ;

__attribute__((used)) static void
ct_bus_dmamap_addr (void *arg, bus_dma_segment_t *segs, int nseg, int error)
{
 unsigned long *addr;

 if (error)
  return;

 KASSERT(nseg == 1, ("too many DMA segments, %d should be 1", nseg));
 addr = arg;
 *addr = segs->ds_addr;
}
